force-app/main/default/objects/Account_LSI__c/fields/Large_Scale_Issue__c.field-meta.xml
<CustomField>
    <fullName>Large_Scale_Issue__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Large Scale Issue</label>
    <referenceTo>Large_Scale_Issue__c</referenceTo>
    <relationshipLabel>Account LSI&apos;s</relationshipLabel>
    <relationshipName>Account_LSI_s</relationshipName>
    <type>Lookup</type>
</CustomField>