force-app/main/default/objects/Account_LSI__c/fields/LSI__c.field-meta.xml
<CustomField>
    <fullName>LSI__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>LSI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>